<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
  xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">

  <modelVersion>4.0.0</modelVersion>

  <properties>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <maven.compiler.source>21</maven.compiler.source>
    <maven.compiler.target>21</maven.compiler.target>
    <planetiler.version>0.7-SNAPSHOT</planetiler.version>
    <junit.version>5.10.1</junit.version>

    <mainClass>org.openmaptiles.OpenMapTilesMain</mainClass>
    <image.version>${project.version}</image.version>
    <image>openmaptiles/planetiler-openmaptiles:${image.version}</image>
    <assembly-phase>package</assembly-phase>
    <jib.platform-arch>amd64</jib.platform-arch>
    <jib.platform-os>linux</jib.platform-os>
  </properties>

  <groupId>org.openmaptiles</groupId>
  <artifactId>planetiler-openmaptiles</artifactId>
  <version>3.15.0-SNAPSHOT</version>

  <name>OpenMapTiles Vector Tile Schema implementation for Planetiler tool</name>

  <repositories>
    <!-- Planetiler depends on geotools for shapefile processing, which is not in maven central. Add here: -->
    <repository>
      <id>osgeo</id>
      <name>OSGeo Release Repository</name>
      <url>https://repo.osgeo.org/repository/release/</url>
      <snapshots>
        <enabled>false</enabled>
      </snapshots>
      <releases>
        <enabled>true</enabled>
      </releases>
    </repository>
    <!-- Get planetiler snapshot builds from here: -->
    <repository>
      <id>nexus-snapshots</id>
      <name>Nexus SNAPSHOT Repository</name>
      <url>https://s01.oss.sonatype.org/content/repositories/snapshots/</url>
      <snapshots>
        <enabled>true</enabled>
      </snapshots>
      <releases>
        <enabled>false</enabled>
      </releases>
    </repository>
  </repositories>

  <dependencies>
    <dependency>
      <groupId>com.onthegomap.planetiler</groupId>
      <artifactId>planetiler-core</artifactId>
      <version>${planetiler.version}</version>
    </dependency>
    <dependency>
      <groupId>org.yaml</groupId>
      <artifactId>snakeyaml</artifactId>
      <version>2.2</version>
    </dependency>
    <dependency>
      <groupId>org.commonmark</groupId>
      <artifactId>commonmark</artifactId>
      <version>0.21.0</version>
    </dependency>

    <!-- To use test utilities: -->
    <dependency>
      <groupId>com.onthegomap.planetiler</groupId>
      <artifactId>planetiler-core</artifactId>
      <version>${planetiler.version}</version>
      <type>test-jar</type>
      <scope>test</scope>
    </dependency>

    <dependency>
      <groupId>org.junit.jupiter</groupId>
      <artifactId>junit-jupiter-api</artifactId>
      <version>${junit.version}</version>
      <scope>test</scope>
    </dependency>

    <dependency>
      <groupId>org.junit.jupiter</groupId>
      <artifactId>junit-jupiter-params</artifactId>
      <version>${junit.version}</version>
      <scope>test</scope>
    </dependency>
  </dependencies>

  <scm>
    <connection>scm:git:https://github.com/openmaptiles/planetiler-openmaptiles.git</connection>
    <url>https://github.com/openmaptiles/planetiler-openmaptiles</url>
  </scm>

  <build>
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-surefire-plugin</artifactId>
        <version>3.2.2</version>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-failsafe-plugin</artifactId>
        <version>3.2.2</version>
      </plugin>

      <plugin>
        <groupId>com.diffplug.spotless</groupId>
        <artifactId>spotless-maven-plugin</artifactId>
        <version>2.41.1</version>
        <configuration>
          <java>
            <importOrder/>
            <removeUnusedImports/>
            <eclipse>
              <version>4.21.0</version>
              <file>eclipse-formatter.xml</file>
            </eclipse>
          </java>
          <markdown>
            <includes>
              <include>**/*.md</include>
            </includes>
            <excludes>
              <exclude>**/target/**</exclude>
            </excludes>
            <flexmark/>
          </markdown>
        </configuration>
        <!-- bind to "mvn verify" -->
        <executions>
          <execution>
            <goals>
              <goal>check</goal>
            </goals>
          </execution>
        </executions>
      </plugin>

      <!-- require building with jdk 21 -->
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-enforcer-plugin</artifactId>
        <version>3.4.1</version>
        <executions>
          <execution>
            <id>enforce-java</id>
            <goals>
              <goal>enforce</goal>
            </goals>
            <configuration>
              <rules>
                <requireJavaVersion>
                  <version>21</version>
                </requireJavaVersion>
              </rules>
            </configuration>
          </execution>
        </executions>
      </plugin>

      <!-- Create an executable jar from "mvn package" goal -->
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-assembly-plugin</artifactId>
        <version>3.6.0</version>
        <dependencies>
          <dependency>
            <groupId>com.onthegomap.planetiler</groupId>
            <artifactId>planetiler-core</artifactId>
            <version>${planetiler.version}</version>
          </dependency>
        </dependencies>

        <configuration>
          <archive>
            <manifestEntries>
              <Multi-Release>true</Multi-Release>
            </manifestEntries>
            <manifest>
              <mainClass>${mainClass}</mainClass>
            </manifest>
          </archive>
          <descriptorRefs>
            <descriptorRef>with-deps</descriptorRef>
          </descriptorRefs>
          <attach>false</attach>
        </configuration>

        <executions>
          <execution>
            <id>make-assembly</id>
            <phase>${assembly-phase}</phase>
            <goals>
              <goal>single</goal>
            </goals>
          </execution>
        </executions>
      </plugin>

      <!-- Make latest git commit timestamp available to jib  -->
      <plugin>
        <groupId>org.codehaus.mojo</groupId>
        <artifactId>buildnumber-maven-plugin</artifactId>
        <version>3.2.0</version>
        <executions>
          <execution>
            <phase>validate</phase>
            <goals>
              <goal>create</goal>
            </goals>
          </execution>
        </executions>
        <configuration>
          <doCheck>false</doCheck>
          <doUpdate>false</doUpdate>
        </configuration>
      </plugin>

      <!-- Create a runnable container -->
      <plugin>
        <groupId>com.google.cloud.tools</groupId>
        <artifactId>jib-maven-plugin</artifactId>
        <version>3.4.0</version>
        <configuration>
          <from>
            <image>
              eclipse-temurin:21-jre
            </image>
            <platforms>
              <platform>
                <architecture>${jib.platform-arch}</architecture>
                <os>${jib.platform-os}</os>
              </platform>
            </platforms>
          </from>
          <to>
            <image>${image}</image>
          </to>
          <container>
            <labels>
              <org.opencontainers.image.source>
                https://github.com/openmaptiles/planetiler-openmaptiles
              </org.opencontainers.image.source>
            </labels>
            <mainClass>${mainClass}</mainClass>
            <creationTime>${maven.build.timestamp}</creationTime>
            <filesModificationTime>${maven.build.timestamp}</filesModificationTime>
          </container>
        </configuration>
      </plugin>
    </plugins>
  </build>

  <profiles>
    <profile>
      <id>jib-multi-arch</id>
      <build>
        <plugins>
          <plugin>
            <groupId>com.google.cloud.tools</groupId>
            <artifactId>jib-maven-plugin</artifactId>
            <configuration>
              <from>
                <platforms>
                  <platform>
                    <architecture>amd64</architecture>
                    <os>linux</os>
                  </platform>
                  <platform>
                    <architecture>arm64</architecture>
                    <os>linux</os>
                  </platform>
                </platforms>
              </from>
            </configuration>
          </plugin>
        </plugins>
      </build>
    </profile>
  </profiles>
</project>
